--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 
 # production
 /build
+/.idea
+*.lock
 
 # misc
 .DS_Store
@@ -19,4 +21,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-*.lock
