--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,7 @@
 
 # production
 /build
-/.idea
-*.lock
+/design
 
 # misc
 .DS_Store
@@ -21,3 +20,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
