--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "antd": "^3.13.0",
     "autoprefixer": "7.1.6",
+    "axios": "^0.18.0",
     "babel-jest": "^22.1.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.7.0",
@@ -25,6 +26,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "22.4.2",
+    "jsonp": "^0.2.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "object-assign": "4.1.1",
