--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,9 @@
     "acceptance-tests",
     "webpack",
     "jest",
-    "src/setupTests.ts"
+    "src/setupTests.ts",
+    "resource",
+    "design",
+    "config"
   ]
 }
