--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
+    "draft-js": "^0.10.5",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "0.11.2",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
@@ -41,6 +42,7 @@
     "react-app-rewired": "^1.4.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.7.0",
+    "react-draft-wysiwyg": "^1.13.1",
     "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
     "source-map-loader": "^0.2.1",
@@ -61,10 +63,12 @@
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.10.27",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.21",
     "@types/react-dom": "^16.0.11",
+    "@types/react-draft-wysiwyg": "^1.12.1",
     "@types/react-router-dom": "^4.3.1",
     "typescript": "^3.2.4"
   },
