--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "draft-js": "^0.10.5",
+    "echarts": "^4.2.0-rc.2",
+    "echarts-for-react": "^2.0.15-beta.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "0.11.2",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
@@ -64,6 +66,7 @@
   },
   "devDependencies": {
     "@types/draft-js": "^0.10.27",
+    "@types/echarts": "^4.1.3",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.21",
