--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@antv/g6": "^3.5.1",
+    "@panzoom/panzoom": "^4.1.0",
     "antd": "^4.2.5",
     "axios": "^0.19.2",
     "qs": "^6.9.4",
